FIxing the footer to align using flex

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -35,4 +35,8 @@ a {
   article {
     text-align: start;
   }
+
+  .container {
+    @include containers;
+  }
 }
