--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -55,13 +55,48 @@
 }
 
 .footer_container {
-   display: grid;
-   grid-template-columns: repeat(4, 1fr);
-   column-gap: 10px;
+   display: flex;
+   flex-direction: row;
+   & li + li {
+     margin-left: 17px;
+   }
 }
 
 .footer_container a {
   color: $footer_color;
+}
+
+@media (min-width: $desktop_min_width) {
+  .footer_div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+  }
+
+  // .footer_logo {
+  //   order: 1;
+  // }
+
+  .footer_navigation {
+    order: 2;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    & ul + ul {
+      margin-top: 0;
+    }
+  }
+
+  .footer_container {
+    order: 1;
+    align-self: center;
+  }
+  .social_container {
+    order: 2;
+    margin-inline-start: 261px;
+  }
 }
 
 
